timetoggle: add report for current month
